// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`orgChart resolver with no teams should report no teams found 1`] = `
Array [
  [GraphQLError: No teams found.],
]
`;

exports[`orgChart resolver with no teams should return error without gcIDa 1`] = `
Array [
  [GraphQLError: Field "orgchart" argument "gcIDa" of type "ID!" is required but not provided.],
]
`;

exports[`orgChart resolver with orphaned teams should report orphan status 1`] = `
Object {
  "data": null,
  "errors": Array [
    [GraphQLError: Organizational structure has diverged - found orphans.],
  ],
}
`;

exports[`orgChart resolver with structured teams with no root should report lack of root 1`] = `
Object {
  "data": null,
  "errors": Array [
    [GraphQLError: Cannot determine root node],
  ],
}
`;

exports[`orgChart resolver with structured teams with valid root should return lines and boxes 1`] = `
Object {
  "data": Object {
    "orgchart": Object {
      "boxes": Array [
        Object {
          "id": "f",
        },
        Object {
          "id": "e",
        },
        Object {
          "id": "d",
        },
        Object {
          "id": "c",
        },
        Object {
          "id": "b",
        },
        Object {
          "id": "a",
        },
      ],
      "lines": Array [
        Object {
          "id": "f->e",
        },
        Object {
          "id": "e->d",
        },
        Object {
          "id": "d->c",
        },
        Object {
          "id": "c->b",
        },
        Object {
          "id": "b->a",
        },
      ],
    },
  },
}
`;
